# couchbase-rs

./: .dockerignore  Cargo.toml  README.md  release.toml
.github/workflows/: clippy.yml  feature-check.yml  fit-performer-image.yml  prune-stale-images.yml  publish.yml  tests.yml
performer/: Cargo.toml  Dockerfile  README.md  build.rs
performer/scripts/: update-protobuf.sh
performer/src/: main.rs  performer.rs
performer/src/cluster/: connection.rs  options.rs
performer/src/commands/: authenticator.rs  bucket_management.rs  collection_management.rs  execution.rs  helpers.rs  kv.rs  kv_binary.rs  mod.rs  mutations.rs  query.rs  query_index_management.rs  sdk.rs  search.rs  search_index_management.rs  subdoc.rs  wait_until_ready.rs
performer/src/common/: batcher.rs  bounds.rs  content.rs  executor.rs  horizontal_scale_runner.rs  location.rs  metrics.rs  mod.rs
performer/src/counters/: counter.rs
performer/src/errors/: error.rs
performer/src/observability/: mod.rs  span_owner.rs
performer/src/streams/: mod.rs  stream.rs  stream_owner.rs
performer/src/translations/: bucket_manager_options.rs  bucket_manager_settings.rs  cluster_options.rs  collection_manager_options.rs  collection_manager_settings.rs  common.rs  kv_options.rs  mod.rs  observability.rs  query_index_options.rs  search_index_options.rs  search_options.rs  search_queries.rs  subdoc_options.rs  wait_until_ready_options.rs
sdk/couchbase/: Cargo.toml
sdk/couchbase-connstr/: Cargo.toml
sdk/couchbase-connstr/src/: error.rs  lib.rs
sdk/couchbase-core/: Cargo.toml
sdk/couchbase/src/: lib.rs  (+2 more)
(+41 files in other folders)
