[package]
name = "fit-performer"
edition = "2021"
publish = false

[dependencies]
chrono = "0.4.42"
couchbase = { path = "../sdk/couchbase", features = ["internal"] }
env_logger = "0.11"
fastrand = "2.3.0"
futures = "0.3.31"
log = "0.4.28"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "tls-roots"] }
opentelemetry_sdk = "0.31.0"
prost = "0.14.3"
prost-types = "0.14.3"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.38.2"
tokio = "1.5"
tokio-rustls = "0.26.4"
tokio-util = "0.7.16"
tonic = "0.14.5"
tonic-prost = "0.14.5"
tracing = { version = "0.1.44", features = ["log-always"] }
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.18.0"

[build-dependencies]
protox = "0.9.1"
tonic-prost-build = "0.14.5"
